--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
         <artifactId>serenity-core</artifactId>
         <version>1.1.38</version>
     </dependency>
-    <dependency>
-    <groupId>net.serenity-bdd</groupId>
-    <artifactId>serenity-cucumber</artifactId>
-    <version>1.1.9</version>
-    <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+    <!--<groupId>net.serenity-bdd</groupId>-->
+    <!--<artifactId>serenity-cucumber</artifactId>-->
+    <!--<version>1.1.9</version>-->
+    <!--<scope>test</scope>-->
+    <!--</dependency>-->
     <dependency>
         <groupId>net.serenity-bdd</groupId>
         <artifactId>serenity-junit</artifactId>
