--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,3 +1,3 @@
 serenity.console.colors = true
   webdriver.wait.for.timeout = 100000
-webdriver.chrome.driver = 'src/test/resources/chromedriver'
+webdriver.chrome.driver = src/test/resources/chromedriver
