--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,12 @@
         <version>1.8.21</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>2.53.0</version>
+    </dependency>
 </dependencies>
-
  <build>
 <plugins>
     <plugin>
