--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
         <artifactId>selenium-chrome-driver</artifactId>
         <version>2.53.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-remote-driver</artifactId>
+        <version>2.53.1</version>
+    </dependency>
 </dependencies>
  <build>
 <plugins>
