--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -2,3 +2,36 @@ serenity.console.colors = true
   webdriver.wait.for.timeout = 100000
 webdriver.chrome.driver = src/test/resources/chromedriver-linux-64bit-v233
 chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
+
+
+
+#webdriver.driver = chrome
+#webdriver.chrome.driver = chromedriver
+#
+#serenity.project.name = Automated Testing Mobile Web
+#
+#chrome.switches = --headless;--incognito;--disable-download-notification;--user-agent=Mozilla/5.0 (Linux; Android 6.0.1; SM-G920V Build/MMB29K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.98 Mobile Safari/537.36;--enable-automation
+#
+#firefox.preferences=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/34.0.1847.131 Safari/537.36
+#firefox.preference.separator=&
+#
+#serenity.use.unique.browser = false
+#
+#serenity.browser.height = 736
+#serenity.browser.width = 414
+#serenity.dry.run=false
+#
+#serenity.test.root=net.thucydides.showcase.cucumber.junit
+#
+## How long does Serenity wait for elements that are not present on the screen to load (in miliseconds)
+#webdriver.timeouts.implicitlywait = 20000
+#
+##serenity.take.screenshots=FOR_FAILURES
+##serenity.take.screenshots=FOR_EACH_ACTION
+#serenity.take.screenshots=BEFORE_AND_AFTER_EACH_STEP
+##serenity.take.screenshots=AFTER_EACH_STEP
+##serenity.take.screenshots=DISABLED
+#
+##serenity.batch.strategy=DIVIDE_EQUALLY
+##serenity.batch.number=1
+##serenity.batch.size=2
