--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
         <version>1.8.21</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>1.6.1</version>
+    </dependency>
 </dependencies>
  <build>
 <plugins>
