--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,8 +1,8 @@
 serenity.console.colors = true
   webdriver.wait.for.timeout = 100000
 webdriver.chrome.driver = src/test/resources/chromedriver-linux-64bit-v233
-#chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
-
+chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
+webdriver.timeouts.implicitlywait = 20000
 
 
 #webdriver.driver = chrome
