chrome driver mess

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,11 +1,10 @@
 serenity.console.colors = true
-  webdriver.wait.for.timeout = 100000
-webdriver.chrome.driver = src/test/resources/chromedriver-linux-64bit-v233
-chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
+ webdriver.wait.for.timeout = 100000
+#webdriver.chrome.driver = src/test/resources/chromedriver-mac
+#chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
 webdriver.timeouts.implicitlywait = 20000
 
 
-#webdriver.driver = chrome
 #webdriver.chrome.driver = chromedriver
 #
 #serenity.project.name = Automated Testing Mobile Web
