--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,8 +1,8 @@
 serenity.console.colors = true
-#webdriver.wait.for.timeout = 100000
+webdriver.wait.for.timeout = 100000
 #webdriver.chrome.driver = chromedriver-linux-64bit-v233
-chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
-webdriver.timeouts.implicitlywait = 20000
+#chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
+webdriver.timeouts.implicitlywait = 200000
 
 
 #webdriver.chrome.driver = chromedriver
