moving 2.27 linux version

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,11 +1,11 @@
 serenity.console.colors = true
 webdriver.wait.for.timeout = 100000
-#webdriver.chrome.driver = ./src/test/resources/chromedriver-linux-64bit-v233
+webdriver.chrome.driver = /src/test/resources/chromedriver-linux-v227
 #chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
 webdriver.timeouts.implicitlywait = 200000
 
 
-#webdriver.chrome.driver = chromedriver
+#webdriver.chrome.driver = chromedriver-linux-v227
 #
 #serenity.project.name = Automated Testing Mobile Web
 #
