headless option added

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,12 +1,10 @@
 serenity.console.colors = true
 webdriver.wait.for.timeout = 100000
 webdriver.chrome.driver = /src/test/resources/chromedriver-linux-v227
-#chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
+chrome.switches = --headless;--incognito;--disable-download-notification;--enable-automation
 webdriver.timeouts.implicitlywait = 200000
 
 
-#webdriver.chrome.driver = chromedriver-linux-v227
-#
 #serenity.project.name = Automated Testing Mobile Web
 #
 #chrome.switches = --headless;--incognito;--disable-download-notification;--user-agent=Mozilla/5.0 (Linux; Android 6.0.1; SM-G920V Build/MMB29K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.98 Mobile Safari/537.36;--enable-automation
