--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,6 +1,6 @@
 serenity.console.colors = true
 webdriver.wait.for.timeout = 100000
-webdriver.chrome.driver = src/test/resources/chromedriver-linux-v227
+#webdriver.chrome.driver = src/test/resources/chromedriver-linux-v227
 chrome.switches = --headless
 webdriver.timeouts.implicitlywait = 200000
 
