add untrusted certificate

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -3,7 +3,7 @@ webdriver.wait.for.timeout = 100000
 #webdriver.chrome.driver = src/test/resources/chromedriver-linux-v227
 chrome.switches = --headless; no-sandbox
 webdriver.timeouts.implicitlywait = 200000
-
+untrusted.certificates=TRUE
 
 #serenity.project.name = Automated Testing Mobile Web
 #
