fixing config issues

--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,9 +1,13 @@
 serenity.console.colors = true
 webdriver.wait.for.timeout = 100000
-#webdriver.chrome.driver = src/test/resources/chromedriver-linux-v227
-chrome.switches = --headless; no-sandbox
+webdriver.chrome.driver = src/test/resources/chromedriver-linux-v227
+webdriver.driver = chrome
+chrome.switches = --headless; no-sandbox; --allow-running-insecure-content
 webdriver.timeouts.implicitlywait = 200000
 untrusted.certificates=TRUE
+
+
+
 
 #serenity.project.name = Automated Testing Mobile Web
 #
