--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -2,7 +2,7 @@ serenity.console.colors = true
 webdriver.wait.for.timeout = 100000
 webdriver.chrome.driver = src/test/resources/chromedriver-linux-v233
 webdriver.driver = chrome
-chrome.switches = --headless; no-sandbox; --allow-running-insecure-content
+chrome.switches = --headless; --no-sandbox; --allow-running-insecure-content
 webdriver.timeouts.implicitlywait = 200000
 untrusted.certificates=TRUE
 serenity.browser.height = 600
