--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,5 +1,6 @@
 serenity.console.colors = true
-webdriver.wait.for.timeout = 100000
+webdriver.wait.for.timeout = 200000
+serenity.timeout = 300000
 webdriver.chrome.driver = src/test/resources/chromedriver-linux-v233
 webdriver.driver = chrome
 chrome.switches = --headless; --no-sandbox; --allow-running-insecure-content
