--- a/src/test/resources/serenity.properties
+++ b/src/test/resources/serenity.properties
@@ -1,9 +1,9 @@
 serenity.console.colors = true
 webdriver.wait.for.timeout = 200000
 serenity.timeout = 300000
-webdriver.chrome.driver = src/test/resources/chromedriver-linux-v233
+webdriver.chrome.driver = src/test/resources/chromedriver
 webdriver.driver = chrome
-chrome.switches = --headless; --no-sandbox; --allow-running-insecure-content
+#chrome.switches = --headless; --no-sandbox; --allow-running-insecure-content
 webdriver.timeouts.implicitlywait = 200000
 untrusted.certificates=TRUE
 
